<resources>
    <string name="on_google_map">Google Xəritə Üzərində</string>
    <string name="title_activity_main">Xəritə parametrləri</string>
    <string name="action_quit">Çıxış</string>
    <string name="show_my_position">Mənim Yerim</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="weighting_shortest">Ən Qısa</string>
    <string name="weighting_fastest">Ən Tez</string>
    <string name="use_current_location">İndiki məkanı götür</string>
    <string name="from_location">Başlanğıc ünvan</string>
    <string name="to_location">Son ünvan</string>
    <string name="from_loc">Başlanğıc</string>
    <string name="to_loc">Son</string>
    <string name="choose_from_favorite">Sevimlilərdən seç</string>
    <string name="enter_values">Dəyərləri daxil et</string>
    <string name="point_on_map">Xəritədə qeyd et</string>
    <string name="travel_mode">Səyahət modu</string>
    <string name="travel_mode_foot">Ayaqla</string>
    <string name="travel_mode_bike">Velosipedlə</string>
    <string name="travel_mode_car">Maşınla</string>
    <string name="distance">Məsafə</string>
    <string name="stop_navigation">Naviqasiyanı saxla</string>
    <string name="stop_navigation_msg">Naviqasiya dayansınm?</string>
    <string name="delete_msg">Silinməni təsdiqlə!</string>
    <string name="cancel">Ləğv et</string>
    <string name="stop">Saxla</string>
    <string name="h_m">h:m</string>
    <string name="settings">Parametrlər</string>
    <string name="change_map">Xəritəni dəyiş</string>
    <string name="download_map">Xəritə yüklə</string>
    <string name="navigation">Navigator</string>
    <string name="alternate_route">Alternativ istiqamət</string>
    <string name="fastest">Ən sürətli</string>
    <string name="shortest">Ən qısa</string>
    <string name="directions_navi">İstiqamət və Naviqasiya</string>
    <string name="title_activity_select">Xəritəni seç</string>
    <string name="title_activity_download">Xəritəni yüklə</string>
    <string name="remove">Təmizlə</string>
    <string name="loading_dotdotdot">Yüklənir …</string>
    <string name="path_finding">Yol axtarılır…</string>
    <string name="search_location">Məkanı Axtar</string>
    <string name="tracking_stop">dayan ?</string>
    <string name="tracking_start">başla ?</string>
    <string name="tracking_load">yüklə ?</string>
    <string name="dialog_stop_save_tracking">Gedişi dayandır və yadda saxla ?</string>
    <string name="title_activity_analytics">Analitik</string>
    <string name="visit_home_page">Ana səhifəyə qayıt</string>
    <string name="title_activity_about">Haqqında</string>
    <string name="locale_code">Yerli kod</string>
    <string name="location">Məkan</string>
    <string name="search_engine">Axtarış Sistemi</string>
    <string name="add_address">Ünvan əlavə et</string>
    <string name="title">Başlıq</string>
    <string name="add_text">Əlavə məlumat</string>
    <string name="rate_pocket_maps">Proqramı dəyərləndir</string>
    <string name="swipe_out">Silmək üçün sürüşdür</string>
    <string name="dont_show_again">Bir daha göstərmə</string>
    <string name="wrong_direction">Yanlış istiqmət</string>
    <string name="wait_for_location">Məkan üçün gözlə</string>
    <string name="light_navi">İşıq-Sensorunu istifadə et</string>
    <string name="voice_navi">Səsi istifadə et</string>
    <string name="switch_maps_dir">Xəritə qovluğunu dəyişdir</string>
    <string name="needs_vers_lollipop">Android versiyası ən azı 21 olmalıdır</string>
    <string name="autoselect_map">Xəritəni birbaşa seç</string>
    <string name="autoselect_map_text">Proqramı hər zaman seçilmiş xəritə ilə başladlsın.</string>
    <string name="imp">Daxil et</string>
    <string name="exp">Xaric et</string>
    <string name="units">Ölçü vahidini seç</string>
    <string name="units_metric">Metrik Ölçü vahidləri</string>
    <string name="gps_is_off">Məkan bağlıdır</string>
    <string name="gps_settings">Məkan parametrləri</string>
    <string name="gps_smooth">Hamar hərəkət</string>
    <string name="show_speed">Sürəti göstər</string>
    <string name="speak_speed">Sürəti de</string>
    <string name="search_hint">Mətni daxil et</string>
    <string name="any_voice">Hər hansı səs</string>
    <string name="engine_startup">TTS motoru başladılır …</string>
    <string name="help">Kömək</string>
    <string name="navivoice_wrongdir">Yanlış istiqamət</string>
    <string name="navivoice_meters">metr</string>
    <string name="navivoice_feet">fut</string>
    <string name="navivoice_useround">dairəvi hərəkət</string>
    <string name="navivoice_turnxxx">dön xxx</string>
    <string name="navivoice_keepxxx">saxla xxx</string>
    <string name="navivoice_left">sol</string>
    <string name="navivoice_right">sağ</string>
    <string name="navivoice_slightl">sola dön</string>
    <string name="navivoice_slightr">sağa dön</string>
    <string name="navivoice_sharpl">kəskin sola</string>
    <string name="navivoice_sharpr">kəskin sağa</string>
    <string name="navivoice_on">üzərində</string>
    <string name="navivoice_onto">üzrə</string>
    <string name="navivoice_continue">davam edin</string>
    <string name="navivoice_leaveround">dairəvi yola çıxın</string>
    <string name="navivoice_navend">Navigasiya sonlandı</string>
    <string name="app_name">Taksimiz 2</string>
    <string name="title_user_login">Giriş</string>
    <string name="hint_enter_password">Şifrə</string>
    <string name="hint_reenter_password">Şifrəni təkrarlayın</string>
    <string name="button_sign_in">Daxil ol</string>
    <string name="textView_create_new_account">Hesabınız yoxdur? Burada qeydiyyatdan keçin!</string>
    <string name="title_user_registration">İstifadəçi Qeydiyyatı</string>
    <string name="radioButtonOrderer">Sifarişçi</string>
    <string name="radioButtonDriver">Sürücü</string>
    <string name="radioButtonAdmin">Admin</string>
    <string name="hint_enter_email">İstifadəçi Adı</string>
    <string name="button_next">Növbəti</string>
    <string name="textView_already_registered">Hesabınız var? Buradan daxil olun!</string>
    <string name="log_out">Çıxış</string>
    <string name="title_school_information">Məktəb Hesab Məlumatı</string>
    <string name="hint_school_name">Ad</string>
    <string name="hint_school_information">Məktəb Haqqında Məlumat</string>
    <string name="hint_lesson_name">Fənni daxil et</string>
    <string name="button_add_lesson">Əlavə Et</string>
    <string name="hint_class_name">Sinfi daxil et</string>
    <string name="button_add_class">Əlavə Et</string>
    <string name="button_sign_up">Qeydiyyatdan Keç</string>
    <string name="title_student_information">Şagird Hesab Məlumatı</string>
    <string name="title_teacher_information">Müəllim Hesab Məlumatı</string>
    <string name="hint_teacher_biography">Bioqrafiya</string>
    <string name="buttonNext">Növbəti</string>
    <string name="title_select_class_lesson">SİNİF və DƏRS seçin</string>
    <string name="title_student_profile">Şagird Səhifəsi</string>
    <string name="title_data_show">Məlumat</string>
    <string name="azerbaijan">Azərbaycan</string>
    <string name="azn">Azn</string>
    <string name="english">İngilis</string>
    <string name="russian">Rus</string>
    <string name="date">Gün</string>
    <string name="lesson">Dərs</string>
    <string name="order_type">Sıralama Tipi</string>
    <string name="languages">Dillər</string>
    <string name="students">Şagirdlər</string>
    <string name="teacher_profile">Müəllim Hesabı</string>
    <string name="time">Vaxt</string>
    <string name="lesson_rate">Dərs qiyməti</string>
    <string name="behaviour_rate">Davranış qiyməti</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="error_check_internet">Xəta baş verdi. İnterneti yoxlayın!</string>
    <string name="data_saving">Məlumat saxlanılır…</string>
    <string name="all_student_data">Xahiş olunur bütün şagird məlumatlarını daxil edin!</string>
    <string name="sure_to_exit">Daxil edilmiş məlumatlar silinəcək! Çıxmaq istədiyinizdən əminsinizmi?</string>
    <string name="yes">Bəli</string>
    <string name="no">Xeyr</string>
    <string name="sure_to_save">Hələdə daxil etdiyiniz məlumatları dəyişə bilərsiniz. Yadda saxlamaqdan əminsizmi?</string>
    <string name="opening_profile">Hesab açılır…</string>
    <string name="maybe_profile_data_wrong">Hesab açılarkən xəta baş verdi. Hesab məlumatı səhv ola bilər</string>
    <string name="enter_email">Doğru istifadəçi adını daxil edin (uzunluq > 4)</string>
    <string name="enter_password">Doğru Şifrəni daxil edin (uzunluq > 7)</string>
    <string name="signing">Hesaba daxil olunur</string>
    <string name="incorrect_email">Xəta baş verdi. Hesab məlumatlarını və ya İnternet əlaqəsini yoxlayın!</string>
    <string name="leeson_list">Fənn Listi…</string>
    <string name="enter_school_name">Məktəbi daxil edin</string>
    <string name="enter_school_information">Məktəb haqqında məlumat daxil edin</string>
    <string name="enter_lessons">Dərsləri daxil edin</string>
    <string name="enter_classes">Sinifləri daxil edin</string>
    <string name="registering">Qeydiyyatdan keçilir…</string>
    <string name="could_not_register">Qeydiyyatdan keçmək mümkün olmadı. Bu email mövcud ola bilər</string>
    <string name="data_loading">Məlumat yüklənir</string>
    <string name="school_list">Məktəb Listi…</string>
    <string name="enter_name">Adı daxil edin</string>
    <string name="enter_surname">Soyadı daxil edin</string>
    <string name="select_school_name">Məktəb adını daxil edin</string>
    <string name="select_class_name">Sinifi daxil edin</string>
    <string name="select_lesson_name">Fənni daxil edin</string>
    <string name="enter_teacher_surname">Soyadı daxil edin</string>
    <string name="enter_biography">Bioqrafiyanı daxil edin</string>
    <string name="class_list">Sinif Listi…</string>
    <string name="student">Şagird</string>
    <string name="teacher">Müəllim</string>
    <string name="biography">Bioqrafiya</string>
    <string name="extra_information">Əlavə Məlumat</string>
    <string name="this_school">Mənim Hesabım</string>
    <string name="school_profile">Məktəb Hesabı</string>
    <string name="subject">Mövzu</string>
    <string name="enter_lesson_subject">Dərsin mövzusunu daxil edin</string>
    <string name="lesson_subject">Dərsin Mövzusu</string>
    <string name="delete">SİL</string>
    <string name="phone_number">Telefon Nömrəsi</string>
    <string name="enter_phone_number">Telefon Nömrənsini daxil edin</string>
    <string name="enter_identification_number">Seriya Nömrəsini Daxil Et</string>
    <string name="identification_number">Vəsiqə Seriya AZE №</string>
    <string name="registration">Qeydiyyat</string>
    <string name="username">İstifadəçi adı</string>
    <string name="password">Şifrə</string>
    <string name="enter_money">Məbləği daxil et</string>
    <string name="select_category">Kateqoriyanı Seçin</string>
    <string name="orders_on_way">Yolda Olanlar</string>
    <string name="searching_taxi">Taksi Axtarılanlar</string>
    <string name="completed_orders">Tamamlanmışlar</string>
    <string name="new_orders">Yeni Sifarişlər</string>
    <string name="menu">Menyu</string>
    <string name="enter_car_number">Maşın Nömrəsini Daxil Et</string>
    <string name="car_number">Maşın Nömrəsi</string>
    <string name="car_color">Maşın Rəngi</string>
    <string name="car_year">Maşın İli</string>
    <string name="enter_car_color">Maşın rəngini daxil edin</string>
    <string name="enter_car_year">Maşın ilini daxil edin</string>
    <string name="enter_register_number">Qeydiyyat nömrəsini daxil edin</string>
    <string name="registration_number">Qeydiyyat Nömrəsi</string>
    <string name="car_model">Maşın Modeli</string>
    <string name="enter_car_model">Maşın Modelini Daxil Et</string>
    <string name="category">Kateqoriya</string>
</resources>