<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/menu_about_pocket_maps"
        android:orderInCategory="100"
        android:title="About"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_home_page"
        android:orderInCategory="100"
        android:title="@string/visit_home_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_rate_pocket_maps"
        android:orderInCategory="100"
        android:title="@string/rate_pocket_maps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_export"
        android:orderInCategory="100"
        android:title="@string/exp"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>
